feat: Add Agent Prompt Template Management System
- 新機能: エージェントプロンプト出力形式テンプレート管理システムを実装
  * DynamoDB テーブル作成 (HASH: agentType, RANGE: templateId, PAY_PER_REQUEST)
  * Lambda CRUD操作関数 (create/read/update/delete templates)
  * フロントエンド管理ページ (prompt-management.html/js)
  * 3つのチャットページに統合 (テンプレート選択UI)

- 修正: 認証エラーの根本原因を解決
  * prompt-management.js apiRequest() を修正 (Bearer プレフィックス、authManager統合、401リトライ)
  * CloudFormation APIGatewayRole に PromptManagementLambda 権限を追加

- 改善: Lambda 初回起動時に自動初期化
  * DynamoDBが空なら default templates を自動作成
  * グローバルフラグで warm invocation での重複チェックを防止

- インフラ: CloudFormation テンプレート更新
  * DynamoDBPromptTemplatesTable (新規)
  * PromptManagementLambda + PromptManagementLambdaPermission (新規)
  * API Gateway メソッド (GET/POST/PUT/DELETE/OPTIONS)
  * IAM ポリシー更新

アーキテクチャ:
  * システムプロンプト (固定): Bedrock Agent Instructions に保存
  * 出力形式テンプレート (編集可能): DynamoDB + ユーザーが管理

デプロイメント:
  * deploy-doctoknow.ps1 に Prompt Management Lambda デプロイセクション追加
  * CloudFormation スタック更新で新規リソース反映

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,6 +125,9 @@
                 <button class="nav-tab" data-page="specification">
                     📖 仕様書
                 </button>
+                <button class="nav-tab" data-page="prompt-management">
+                    ⚙️ テンプレート管理
+                </button>
                 <button id="logoutBtn" class="btn btn-secondary btn-small">
                     ログアウト
                 </button>
